# SwiftUI-View-Factory

./: .gitignore  AGENTS.md  Dockerfile  GeneratedView.swift  Makefile  README.codex.md  README.md  REPO_DESCRIPTION.md  ROADMAP.md  STRUCTURE_PLAN.md  USAGE.md  check_hetzner_health.sh  codex-plan.md  codex.repo.yaml  codex.yml  docker-compose.yml  onStart.sh  requirements.txt
.codex/: README.md
.github/: pull_request_template.md
DragAndDropApp/: DragDropArea.layout.json  DragDropAreaView.swift  Package.swift  README.md
ExampleApp/: Package.swift  README.md
Images/: README.md
Layouts/: 3-try.layout.json  README.md  example_app.layout.json  example_app_mockup.layout.json
SDK/: README.md
VisionDemoApp/: Package.swift  README.md
api/: openapi.yml
api-versioning/: openapi_critique.md  openapi_v1.3.yml
app/: main.py
cli/: vi.py
codex/:  for :codex  README.md  analyze-build-log.codex.yml  docker-draganddrop.codex.yml  docker.codex.yml  (+3 more)
handlers/client/: README.md  pyproject.toml
handlers/client/swift_ui_view_factory_api_client/: __init__.py
handlers/client/swift_ui_view_factory_api_client/api/factory/: generate_swift_ui_view.py  interpret_layout.py
handlers/client/swift_ui_view_factory_api_client/api/secrets/: get_open_ai_key.py
handlers/client/swift_ui_view_factory_api_client/models/: __init__.py  error_response.py  generate_swift_ui_view_body.py  generate_swift_ui_view_body_style.py  generate_swift_ui_view_response_200.py  interpret_layout_body.py  layout_interpretation_response.py  layout_node.py  layout_node_type.py  open_ai_key_response.py
(+139 files in other folders)
